--- a/src/global.css
+++ b/src/global.css
@@ -52,14 +52,14 @@ button {
 .maH12{
     margin: 0 12px;
 }
-.maV24{
-    margin: 24px 0;
+.maH24{
+    margin: 0 24px;
 }
 .maV12{
-    margin: 0 12px;
+    margin: 12px 0;
 }
 .maV24{
-    padding: 24px 0;
+    margin: 24px 0;
 }
 .pa12{
     padding: 12px;
@@ -84,9 +84,25 @@ button {
 .fontB{
     font-weight: bold;
 }
+.fontSmall{
+    font-size: 12px;
+}
 .font18{
     font-size: 18px;
 }
 .font24{
     font-size: 24px;
+}
+
+.borderR12{
+    border-radius: 12px;
+}
+
+
+
+.center{
+    height: calc(100vh - 160px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
