--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -17,7 +17,7 @@ html,body,#root,.project{
         background-color: #fff;
     }
     .bg2{
-        background-color: #cccccc;
+        background-color: #f7f7f7;
     }
     .bg3{
         background-color: #f3f3f3;
