更新首页内容

--- a/src/pages/home/components/examCountdown/styles.module.less
+++ b/src/pages/home/components/examCountdown/styles.module.less
@@ -29,4 +29,12 @@
             height: 40px;
         }
     }
+    .examsBox{
+        display: grid;
+        row-gap: 8px;
+        grid-template-rows: 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
 }
