--- a/src/pages/home/components/timeWeather/styles.module.less
+++ b/src/pages/home/components/timeWeather/styles.module.less
@@ -24,3 +24,15 @@
         }
     }
 }
+
+@keyframes flicker {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 100%;
+    }
+    100% {
+        opacity: 0;
+    }
+  }
