--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -26,8 +26,16 @@ html,body,#root,.project{
     .bg3{
         background-color: #f3f3f3;
     }
-    .cardBox{
+    .icon_hover{
+        
+        &:hover{
+            color:#46a7a7
+        }
+    }
+    .cursor{
         cursor: pointer;
+    }
+    .cardBox{
         .title{
             font-weight: bold;
         }
@@ -37,7 +45,7 @@ html,body,#root,.project{
             box-shadow: #d2dde7 0px 4px 24px;
             transform: scale(1.03);
             /* border: 2px solid #d2dde7; */
-            background-color: #aadfdb;
+            // background-color: #aadfdb;
             
         }
        
@@ -151,8 +159,12 @@ html,body,#root,.project{
     .bg3{
         background-color: #4c4c4c;
     }
+    .icon_hover{
+        &:hover{
+            color:#1a5050
+        }
+    }
     .cardBox{
-        cursor: pointer;
         .title{
             font-weight: bold;
         }
@@ -162,7 +174,7 @@ html,body,#root,.project{
             box-shadow: #1e1f20 0px 4px 24px;
             transform: scale(1.03);
             /* border: 2px solid #d2dde7; */
-            background-color: #1c2625;
+            // background-color: #1c2625;
     
         }
        
