--- a/src/components/audioPlayer/style.module.less
+++ b/src/components/audioPlayer/style.module.less
@@ -1,7 +1,8 @@
 .audioPlayerBox{
     position: relative;
-    display: grid;
-    grid-template-columns: auto 1fr;
+    // display: grid;
+    // grid-template-columns: auto 1fr;
+    display: flex;
     img{
         width:48px;
         height:48px;
