--- a/src/pages/home/components/musicPlayer/styles.module.less
+++ b/src/pages/home/components/musicPlayer/styles.module.less
@@ -2,3 +2,12 @@
     height:240px;
     grid-row-end: span calc(48 + 5);
 }
+.contrBtns{
+    position: absolute;
+    right: 0;
+    height: 40px;
+    z-index: 10;
+}
+.playerBox{
+    height:52px
+}
