--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -43,7 +43,7 @@ html,body,#root,.project{
         transition: all 0.5s ease-out;
         &:hover{
             box-shadow: #d2dde7 0px 4px 24px;
-            transform: scale(1.03);
+            // transform: scale(1.03);
             /* border: 2px solid #d2dde7; */
             // background-color: #aadfdb;
             
@@ -172,7 +172,7 @@ html,body,#root,.project{
         transition: all 0.5s ease-out;
         &:hover{
             box-shadow: #1e1f20 0px 4px 24px;
-            transform: scale(1.03);
+            // transform: scale(1.03);
             /* border: 2px solid #d2dde7; */
             // background-color: #1c2625;
     
