--- a/src/style.less
+++ b/src/style.less
@@ -27,3 +27,20 @@
         right: 0;
     }
 }
+.contentBox{
+    height: calc(100vh - 130px);
+    overflow-y: auto;
+}
+
+@media screen and (max-width: 1400px) {
+    aside{
+        width: 48px;
+        position: sticky;
+        top: 106px;
+    }
+}
+@media screen and (max-width: 630px) {
+    aside{
+        display: none;
+    }
+}
