--- a/src/pages/home/styles.less
+++ b/src/pages/home/styles.less
@@ -93,6 +93,13 @@
                 width: 60px;
                 border-radius: 50px;
             }
+            label{
+                display: flex;
+                justify-content: space-evenly;
+                align-items: start;
+                flex-direction: column;
+                height: calc(100% - 48px);
+            }
         }
         
     }
@@ -193,25 +200,25 @@
         .screen_mid_inner1{
             height:180px;
             grid-row-end: span calc(36 + 5);
+            justify-content: space-between;
             img{
                 height: 5em;
                 width: 5em;
                 border-radius: 50px;
+            }
+            label{
+                display: flex;
+                justify-content: space-evenly;
+                align-items: start;
+                flex-direction: column;
+                height: calc(100% - 48px);
             }
         }
         .screen_mid_inner2{
             height:180px;
             grid-row-end: span calc(36 + 5);
             
-            // display: grid;
-            // grid-template-rows: 1fr 45px;
-            // align-items: center;
-            // justify-content: center;
-            // position: relative;
-            // .item2_inner2_inner1{
-            //     font-size: 58px;
-            //     text-align: center;
-            // }
+            
         } 
     }
     .item2{
