--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -4,6 +4,10 @@ html,body,#root,.project{
 }
 .light{
     height: 100%;
+    
+    .text_active{
+        color: #46a7a7;
+    }
     .textColor,a{
         color: #333
     };
@@ -134,6 +138,9 @@ html,body,#root,.project{
     }
 }
 .dark{
+    .text_active{
+        color: #1a5050;
+    }
     height: 100%;
     // display: none;
     .textColor,a{
