--- a/src/components/translate/style.module.less
+++ b/src/components/translate/style.module.less
@@ -8,5 +8,6 @@
         height: 100%;
         font-size: 16px;
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        resize: none
     }
 }
