--- a/src/pages/home/components/examCountdown/styles.module.less
+++ b/src/pages/home/components/examCountdown/styles.module.less
@@ -38,3 +38,14 @@
         text-align: center;
     }
 }
+
+
+
+@media screen and (max-width: 630px) {
+    .item2_inner2{
+        height:100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+}
