--- a/src/components/notices/style.module.less
+++ b/src/components/notices/style.module.less
@@ -3,4 +3,14 @@
     right: 20px;
     top:120px;
     z-index: 99;
+    display: flex;
+    flex-direction:column ;
+    align-items: center;
+    .clear_btn{
+        cursor: pointer;
+        &:hover{
+            background-color: rgb(26, 192, 221);
+            color: #fff;
+        }
+    }
 }
