--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -6,9 +6,16 @@ html,body,#root,.project{
     .textColor,a{
         color: #333
     };
+    .textColorWhite{
+        color:#ffffff;
+    }
     .textColorGgray{
         color:#5e5e5e;
     }
+    .textColorGgray2{
+        color:#bdbdbd;
+    }
+    
     .btnDefault{
         background-color: #46a7a7;
         color: #186d6d;
@@ -24,6 +31,9 @@ html,body,#root,.project{
     }
     .bg3{
         background-color: #f3f3f3;
+    }
+    .bg4{
+        background-color: #353535;
     }
     .icon_hover{
         
@@ -102,9 +112,14 @@ html,body,#root,.project{
     .textColor,a{
         color: #b9b9b9
     };
-    
+    .textColorWhite{
+        color:#1b1b1b;
+    }
     .textColorGgray{
         color:#c2c2c2;
+    }
+    .textColorGgray2{
+        color:#646464;
     }
     .btnDefault{
         background-color: #1a5050;
@@ -121,6 +136,9 @@ html,body,#root,.project{
     }
     .bg3{
         background-color: #4c4c4c;
+    }
+    .bg4{
+        background-color: #d1d1d1;
     }
     .icon_hover{
         &:hover{
