--- a/src/global.css
+++ b/src/global.css
@@ -100,14 +100,39 @@ button {
     display: grid;
     grid-template-columns: 150px 1fr 90px;
 }
+.ma3{
+    margin: 3px;
+}
+.maT3{
+    margin-top: 3px;
+}
+.maB3{
+    margin-bottom: 3px;
+}
+.maR3{
+    margin-right: 3px;
+}
+.maL3{
+    margin-left: 3px;
+}
+.maV3{
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
 .ma6{
     margin: 6px;
+}
+.maT6{
+    margin-top: 6px;
 }
 .maB6{
     margin-bottom: 6px;
 }
 .maR6{
     margin-right: 6px;
+}
+.maL6{
+    margin-left: 6px;
 }
 .maV6{
     margin-top: 6px;
@@ -121,6 +146,9 @@ button {
 }
 .maR12{
     margin-right: 12px;
+}
+.maT12{
+    margin-top: 12px;
 }
 .maB12{
     margin-bottom: 12px;
@@ -143,6 +171,9 @@ button {
 }
 .maR16{
     margin-right: 16px;
+}
+.maT16{
+    margin-top: 16px;
 }
 .maB16{
     margin-bottom: 16px;
@@ -174,6 +205,9 @@ button {
 }
 .maR24{
     margin-right: 24px;
+}
+.maT24{
+    margin-top: 24px;
 }
 .maB24{
     margin-bottom: 24px;
@@ -229,6 +263,9 @@ button {
 
 .fontB{
     font-weight: bold;
+}
+.font10{
+    font-size: 10px;
 }
 .fontSmall{
     font-size: 12px;
@@ -309,4 +346,30 @@ button {
         text-overflow: ellipsis;
 }
 
+/* 自定义滑动条样式 */
+.scrollbarBox{
+    padding: 0;
+    li{
+        list-style: none;
+    }
+  scrollbar-width: none; /* firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+  overflow-x: hidden;
+  overflow-y: auto;
+  scroll-behavior:smooth;
+}
+.scrollbarBox::-webkit-scrollbar{
+    display:none; 
+    width: 6px;  
+}
+.scrollbarBox::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 5px rgba(138, 138, 138, 0.2);
+  background: nb-theme(background-basic-color-4);;
+}
 
+.scrollbarBox::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 5px rgba(138, 138, 138, 0.2);
+  border-radius: 10px;
+  background: nb-theme(background-basic-color-2);;
+}
