--- a/src/pages/news/pages/community/index.less
+++ b/src/pages/news/pages/community/index.less
@@ -8,18 +8,129 @@
         display: grid;
         grid-template-columns: auto 300px;
         grid-template-rows: 100%;
-        column-gap: 18px;
+        height: calc(100% - 43px);
         .hotestNews{
             img{
                 width: 100%;
                 height: 200px;
             }
             section{
+                font-size: 14px;
                 line-height: 2em;
             }
             .hotestNews_content_box{
                 height: calc(100% - 220px);
                 overflow-y: auto;
+                padding-right: 12px;
+                
+                &:hover{
+                    &::-webkit-scrollbar{
+                        display: block; 
+                        
+                    }
+                }
+                .hotestNews_content_box_text,h2,hr{
+                    // 解决滑动条影响内容宽度
+                    width: 492px;
+                }
+            }
+            
+        }
+        .hotestNews_comment_area{
+            border-top-right-radius: 12px;
+            border-bottom-right-radius: 12px;
+            .hotestNews_comment_header_box{
+                p{
+                    font-size: 14px;
+                }
+            }
+            .hotestNews_comment_area_box{
+                padding-right: 12px;
+                height: calc(100% - 58px);
+                &:hover{
+                    &::-webkit-scrollbar{
+                        display: block; 
+                        
+                    }
+                }
+                li{
+                    margin-bottom: 18px;
+                    font-size: 14px;
+                    display: flex;
+                    align-items: center;
+                    img{
+                        margin-right: 8px;
+                        width: 25px;
+                        height: 25px;
+                        border-radius: 50px;
+                    }
+                    .name{
+                        font-size: 10px;
+                        
+                    }
+                }
+                .hotestNews_comment_area_box_text{
+                    width: 242px;
+                }
+                IonIcon{
+                    color: antiquewhite;
+                }
+            }
+        }
+    }
+    .newest_news_box{
+        .header_box{
+            input{
+                height:34px;
+                border: 1px solid;
+                background: none;
+                border-top-left-radius: 6px;
+                border-bottom-left-radius: 6px;
+            }
+            .search_btn{
+                height: 34px;
+                line-height: 34px;
+                border-top-right-radius: 6px;
+                border-bottom-right-radius: 6px;
+            }
+            padding-right: 12px;
+        }
+        .newest_news_box_content_outbox{
+            height: calc(100% - 46px);
+            overflow-y: auto;
+            &:hover{
+                &::-webkit-scrollbar{
+                    display: block; 
+                    
+                }
+            }
+        }
+        .newest_news_box_content_box{
+            padding-right: 6px;
+            width: 672px;
+            
+            li{
+                margin-bottom: 15px;
+                font-size: 14px;
+                img{
+                    margin-right: 12px;
+                    width: 80px;
+                    height: 80px;
+                    border-radius: 6px;
+                }
+                .name{
+                    font-size: 10px;
+                    
+                }
+                h3{
+                    font-weight: bold;
+                }
+                .content{
+                    font-size: 14px;
+                }
+                .bottomContent_box{
+                    font-size: 12px;
+                }
             }
         }
     }
