改善通知功能

--- a/src/components/notices/components/noticeItem/style.module.less
+++ b/src/components/notices/components/noticeItem/style.module.less
@@ -1,21 +1,17 @@
 .box{
     width: 360px;
     border: 1px solid #333;
+    box-sizing: border-box;
     position: relative;
     right:20px;
-    // transition: all 0.5s ease-out;
-    // animation: slideIn 0.5s ease-out;
+    transition: all 0.5s ease-out;
+    animation: slideIn 0.5s ease-out;
     word-wrap: break-word;
     .closeBtn{
         display: none;
         position: absolute;
         top:-12px;
         right:-12px;
-    }
-    .toUnmont{
-        height: 0;
-        padding: 0;
-        opacity: 0;
     }
     &:hover{
         .closeBtn{
@@ -24,18 +20,34 @@
     }
 }
 .toUnmont{
-    height: 0;
+    border: none;
+    // height: 0;
     padding: 0;
-    opacity: 0;
+    // opacity: 0;
     margin: 0;
-    display: none;
+    transition: all 0.5s ease-out;
+    animation: slideIn2 0.5s ease-out;
 }
 
 @keyframes slideIn {
     0% {
-        right:-380px;
+        top: 50px;
+        height:0;
+        opacity: 0;
     }
     100% {
-        right:20px;
+        top: 0px;
+        height:auto;
+        opacity: 1;
+    }
+  }
+@keyframes slideIn2 {
+    0% {
+        height:auto;
+        opacity: 1;
+    }
+    100% {
+        height:0;
+        opacity: 0;
     }
   }
