--- a/src/components/notices/style.module.less
+++ b/src/components/notices/style.module.less
@@ -6,6 +6,8 @@
     display: flex;
     flex-direction:column ;
     align-items: center;
+    overflow-y: auto;
+    height:80vh;
     .clear_btn{
         cursor: pointer;
         &:hover{
