--- a/src/components/notices/style.module.less
+++ b/src/components/notices/style.module.less
@@ -1,10 +1,13 @@
+.hidde{
+    display: none;
+}
 .box{
     position: fixed;
     right: 20px;
     top:120px;
     z-index: 99;
-    display: flex;
-    flex-direction:column ;
+    display: grid;
+    grid-template-rows: 32px auto;
     align-items: center;
     overflow-y: auto;
     height:80vh;
@@ -15,4 +18,8 @@
             color: #fff;
         }
     }
+    
+}
+.notices_items_box{
+    padding-left:12px;
 }
